@@ -1,14 +1,14 @@
 Package: RTCA
 Type: Package
 Title: Open-source toolkit to analyse data from xCELLigence System (RTCA) by Roche
-Version: 1.0.16
+Version: 1.0.17
 Date: 2009-07-13
 Author: Jitao David Zhang, with input from Ulrich Tschulena and Stefan Wiemann
 Maintainer: Jitao David Zhang <j.zhang@dkfz.de>
 Description: Import, analyze and visualize data harvested from Roche(R) Xcelligence RTCA systems. The package imports the rich information in real-time cell electrical impedance data into computational and statistical environment R/Bioconductor. As an alternative to commercial software provided by Roche, the RTCA package provides more transformation (normalization) strategies and various visualization tools.
 License: LGPL-3
 LazyLoad: yes
-Depends: methods, stats,Biobase, RColorBrewer
+Depends: methods,stats,graphics,Biobase,RColorBrewer
 Collate: AllClasses.R AllGenerics.R AllMethods.R RTCAfunctions.R
 URL: http://code.google.com/p/xcelligence/, http://www.xcelligence.roche.com/, http://www.nextbiomotif.com/Home/scientific-programming
 biocViews: CellBasedAssays, Infrastructure, Visualization, 
